mongodb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo
  labels:
    app: mongodb
spec:
  type: ClusterIP
  selector:
    app: mongodb
  ports:
  - port: 27017
    targetPort: 27017
